--- a/biodata.html
+++ b/biodata.html
@@ -3,30 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata Bana</title>
+    <title>User Smells Like Teen Spirit</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h2>Masuk aja, gak dikunci</h2>
-        <p>Isinya gak jelas</p>
+        <h2>WHO?</h2>
     </header>
     <main>
         <section>
-            <h2>Kenalan Bang</h2>
+            <h2>kenalan</h2>
             <ul style="list-style: none; padding: 0;">
                 <li>
-                    hi, gua indri tapi lu bisa manggil gua bana.<br>
-                    umur? cuma angka, tapi kalo kepo sih umur gua udah mau kepala dua.<br>
-                    sekarang lagi kuliah di jurusan Informatika, gak tau juga kenapa gua milih jurusan ini padahal bukan passion gua.<br>
+                    hi, gua indri tapi bisa dipanggil bana.<br>
+                    umur udah mau kepala dua.<br>
+                    sekarang lagi kuliah di jurusan informatika, gak tau juga kenapa gua milih jurusan ini padahal bukan passion gua.<br>
                     hobi gua dengerin lagu sambil bengong, main block blast, scroll sosmed sampe ketiduran, tidur.<br>
                     MBTI gua ISTP. gua orangnya juga santai, kadang ngegas tapi itu kalo lagi bercanda doang, kata temen gua orangnya lempeng (iya sih dikit), ya pokoknya gua orangnya santai dah.<br>
                     gua suka astronomi, fisika, astrofisika.<br>
                     udah sih segitu aja, gak usah kenalan sampe jauh soalnya gua orangnya gak jelas. kalo mau temenan ayok, soalnya gua lagi butuh relasi buat partner makan mie ayam sambil ngobrol random.<br>
-                    sekian perkenalan singkat dari gua. Jangan lupa senyum atau seenggaknya angkat alis satu aja juga udah cukup.
+                    sekian perkenalan singkat dari gua. jangan lupa senyum atau seenggaknya angkat alis satu aja juga udah cukup.
                 </li>
             </ul>
-            <a href="index.html" id="btnnihpencet">Balik lewat sini</a>
+        </section>
+    </main>
+    <main>
+        <section>
+            <h2>spotify</h2>
+            <ul style="list-style: none; padding: 0;">
+                <li>
+                    <a href="https://open.spotify.com/user/nb24rf22o39xgft8bpxtvqw1j?si=e8233a38b9ae446e"target="_blank">
+                        kalo mau mutualan
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
