--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
 </head>
 <body>
     <header>
-        <h2>Masuk aja, gak dikunci</h2>
-        <p>Isinya gak jelas</p>
+        <h2>MET DATENG</h2>
     </header>
     <main>
         <section>
-            <h2>Konteks gua ngebuat web ini</h2>
-            <p>Isinya mau campur, tapi buat sekarang isinya perkenalan diri dulu aja</p>
-        </section>
-        <section>
-            <h2>Baca aja kalo kepo, tapi jangan banyak tanya</h2>
-            <a href="biodata.html" id="btnnihpencet">Bagian sok pentingnya</a>
+            <h2>baca aja kalo kepo, tapi jangan banyak tanya</h2>
+            <a href="biodata.html" id="btnnihpencet">pencet</a>
             <p id="pesan"></p>
         </section>
     </main>
     <footer>
-        <p>&copy; kuat amat baca ampe akhir</p>
+        <p>&copy; anjay jadi</p>
     </footer>
     <script src="script.js"></script>
 </body>
