--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <section>
-            <h2>baca aja kalo kepo, tapi jangan banyak tanya</h2>
+            <h2>baca aja kalo kepo</h2>
             <a href="biodata.html" id="btnnihpencet">pencet</a>
             <p id="pesan"></p>
         </section>
