--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h2>MET DATENG</h2>
+        <h2>MOLOG INTERNAL YANG KEPENCET PUBLISH</h2>
     </header>
     <main>
+        <img src="images/foto.jpeg" class="foto-bulet">
         <section>
-            <h2>baca aja kalo kepo</h2>
-            <a href="biodata.html" id="btnnihpencet">pencet</a>
+            <a href="biodata.html" id="btnnihpencet">about me</a>
             <p id="pesan"></p>
         </section>
     </main>
