--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h2>MOLOG INTERNAL YANG KEPENCET PUBLISH</h2>
+        <h2>MONOLOG INTERNAL YANG KEPENCET PUBLISH</h2>
     </header>
     <main>
         <img src="images/foto.jpeg" class="foto-bulet">
