--- a/biodata.html
+++ b/biodata.html
@@ -16,14 +16,23 @@
             <h2>kenalan</h2>
             <ul style="list-style: none; padding: 0;">
                 <li>
-                    hi, gua indri tapi bisa dipanggil bana.<br>
-                    umur udah mau kepala dua.<br>
-                    sekarang lagi kuliah di jurusan informatika, gak tau juga kenapa gua milih jurusan ini padahal bukan passion gua.<br>
-                    hobi gua dengerin lagu sambil bengong, main block blast, scroll sosmed sampe ketiduran, tidur.<br>
-                    MBTI gua ISTP. gua orangnya juga santai, kadang ngegas tapi itu kalo lagi bercanda doang, kata temen gua orangnya lempeng (iya sih dikit), ya pokoknya gua orangnya santai dah.<br>
-                    gua suka astronomi, fisika, astrofisika.<br>
-                    udah sih segitu aja, gak usah kenalan sampe jauh soalnya gua orangnya gak jelas. kalo mau temenan ayok, soalnya gua lagi butuh relasi buat partner makan mie ayam sambil ngobrol random.<br>
-                    sekian perkenalan singkat dari gua. jangan lupa senyum atau seenggaknya angkat alis satu aja juga udah cukup.
+                    hi, i'm indri, but you can call me bana, and i'm not exactly sure how to start this without sounding either too serious or too careless—so i guess i'll just talk the way i think: a little weird.<br>
+                    i'm currently 20 years old. people say this is the age when you start figuring out who you are. honestly? i think i'm still floating between "i kinda know what i want" and "what is happening?".<br> 
+                    i'm a computer science student, which basically means i spend half my time staring at screens and the other half wondering if i'm the bug.<br> 
+                    people think it's all logic and structure, but honestly? it's 10% coding, 20% stack overflow, and 70% questioning my life choices at 3 a.m. with five terminal windows open and no idea which one is running the server.<br>
+                    <br>
+                    my interests range from things that make no sense to things that feel too heavy—music that hits in the gut, random late-night thoughts about the universe, and coding stuff that either works like magic or crashes everything.<br>
+                    i find peace in things that are too big to understand: black holes, cosmology, quantum mechanics, relativity.<br>
+                    <br>
+                    i'm someone who usually prefers space—physical, mental, emotional. i don't open up easily, not because i don't feel things, but because most of the time i feel too much and have no clue what to do with it.<br>
+                    i used to think i was just numb or detached, but recently i learned that being calm doesn't mean you don't care. sometimes, it just means you're trying not to drown.<br>
+                    <br>
+                    personality-wise, i'm a mix of introvert and selective chaos. i like people, but i also like not talking to them for two weeks.<br>
+                    i'm the type of person who makes decisions in 0.2 seconds and regrets them in 0.3. my coping mechanism is being weird and saying random stuff.<br>
+                    <br>
+                    i'm not always easy to read. sometimes i go quiet—not because i'm upset, but because i need space to clear my head. i just need time to think and recharge.<br>
+                    but when i care, i really care. i'm just not always great at showing it.<br>
+
                 </li>
             </ul>
         </section>
