--- a/biodata.html
+++ b/biodata.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h2>WHO?</h2>
-        <p>jangan banyak tanya</p>
+        <h2>Who Am I?</h2>
+        <p>a self-introduction that doesn't know everything yet</p>
     </header>
     <main>
         <section>
@@ -23,7 +23,8 @@
                     i'm a computer science student, which basically means i spend half my time staring at screens and the other half wondering if i'm the bug. 
                     people think it's all logic and structure, but honestly? it's 10% coding, 20% stack overflow, and 70% questioning my life choices at 3 a.m. with five terminal windows open and no idea which one is running the server.<br>
                     <br>
-                    my interests range from things that make no sense to things that feel too heavy—music that hits in the gut, random late-night thoughts about the universe, and coding stuff that either works like magic or crashes everything. i find peace in things that are too big to understand: black holes, cosmology, quantum mechanics, relativity.<br>
+                    my interests range from things that make no sense to things that feel too heavy—music that hits in the gut, random late-night thoughts about the universe, and coding stuff that either works like magic or crashes everything. 
+                    i find peace in things that are too big to understand: black holes, cosmology, quantum mechanics, relativity.<br>
                     <br>
                     i'm someone who usually prefers space—physical, mental, emotional. i don't open up easily, not because i don't feel things, but because most of the time i feel too much and have no clue what to do with it. 
                     i used to think i was just numb or detached, but recently i learned that being calm doesn't mean you don't care. sometimes, it just means you're trying not to drown.<br>
