--- a/biodata.html
+++ b/biodata.html
@@ -32,7 +32,7 @@
                     personality-wise, i'm a mix of introvert and selective chaos. i like people, but i also like not talking to them for two weeks. 
                     i'm the type of person who makes decisions in 0.2 seconds and regrets them in 0.3. my coping mechanism is being weird and saying random stuff.<br>
                     <br>
-                    i'm not always easy to read. sometimes i go quiet—not because i'm upset, but because i need space to clear my head. i just need time to think and recharge.<br>
+                    i'm not always easy to read. sometimes i go quiet—not because i'm upset, but because i need space to clear my head. i just need time to think and recharge.
                     but when i care, i really care. i'm just not always great at showing it.<br>
 
                 </li>
