--- a/biodata.html
+++ b/biodata.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2>Who Am I?</h2>
+        <h2>Who Am I</h2>
         <p>a self-introduction that doesn't know everything yet</p>
     </header>
     <main>
@@ -21,20 +21,21 @@
                     i'm currently 20 years old. people say this is the age when you start figuring out who you are. honestly? i think i'm still floating between "i kinda know what i want" and "what is happening?".<br> 
                     <br>
                     i'm a computer science student, which basically means i spend half my time staring at screens and the other half wondering if i'm the bug. 
-                    people think it's all logic and structure, but honestly? it's 10% coding, 20% stack overflow, and 70% questioning my life choices at 3 a.m. with five terminal windows open and no idea which one is running the server.<br>
+                    people think it's all logic and structure, but honestly it's 10% coding, 20% stack overflow, and 70% questioning my life choices at 3 a.m. 
+                    with five terminal windows open and no idea which one is running the server.<br>
                     <br>
-                    my interests range from things that make no sense to things that feel too heavy—music that hits in the gut, random late-night thoughts about the universe, and coding stuff that either works like magic or crashes everything. 
+                    my interests go from silly things to heavy stuff—like rock music that hits hard, random late-night thoughts about the universe, and coding stuff that either works or crashes everything. 
                     i find peace in things that are too big to understand: black holes, cosmology, quantum mechanics, relativity.<br>
                     <br>
-                    i'm someone who usually prefers space—physical, mental, emotional. i don't open up easily, not because i don't feel things, but because most of the time i feel too much and have no clue what to do with it. 
-                    i used to think i was just numb or detached, but recently i learned that being calm doesn't mean you don't care. sometimes, it just means you're trying not to drown.<br>
+                    i'm naturally distant person—not because i have hard feeling toward anyone, but because i need space. physical, mental, emotional. 
+                    i don't open up easily, not because i don't feel, but because i often feel too much and have no idea what to do with it. <br>
                     <br>
-                    personality-wise, i'm a mix of introvert and selective chaos. i like people, but i also like not talking to them for two weeks. 
-                    i'm the type of person who makes decisions in 0.2 seconds and regrets them in 0.3. my coping mechanism is being weird and saying random stuff.<br>
+                    getting too attached with someone overwhelms me, and sometimes distance is the only way i know to keep myself steady.
+                    i'm not always easy to read. sometimes i go quiet not because i'm upset, but because i need space to clear my head. i need time to think, breathe, and recharge.
+                    but when i care, i really care. i'm just not always good at showing it. <br>
                     <br>
-                    i'm not always easy to read. sometimes i go quiet—not because i'm upset, but because i need space to clear my head. i just need time to think and recharge.
-                    but when i care, i really care. i'm just not always great at showing it.<br>
-
+                    i'm mix of introvert and selective chaos. i like people, but i also like not talking to them for two weeks.
+                    i make decisions in 0.2 seconds and regret them in 0.3. my coping mechanism is being random and saying word random stuff.
                 </li>
             </ul>
         </section>
@@ -55,4 +56,4 @@
         <p>&copy; kuat amat baca ampe akhir</p>
     </footer>
 </body>
-</html>
+</html
