--- a/biodata.html
+++ b/biodata.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Smells Like Teen Spirit</title>
+    <title>Existensial Crisis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h2>Who Am I</h2>
+        <h2>Who Am I?</h2>
         <p>a self-introduction that doesn't know everything yet</p>
     </header>
     <main>
@@ -16,7 +16,7 @@
             <h2>kenalan</h2>
             <ul style="list-style: none; padding: 0;">
                 <li>
-                    hi, i'm indri, but you can call me bana, and i'm not exactly sure how to start this without sounding either too serious or too careless—so i guess i'll just talk the way i think: a little weird.<br>
+                    hi, i'm indri, but you also can call me bana, and i'm not exactly sure how to start this without sounding like interview, so i guess i'll just talk the way i am: a little weird.<br>
                     <br>
                     i'm currently 20 years old. people say this is the age when you start figuring out who you are. honestly? i think i'm still floating between "i kinda know what i want" and "what is happening?".<br> 
                     <br>
@@ -53,7 +53,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; kuat amat baca ampe akhir</p>
+        <p>&copy; made with half a braincell and questionable decisions</p>
     </footer>
 </body>
 </html
