--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log Internal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h2>MONOLOG INTERNAL YANG KEPENCET PUBLISH</h2>
+        <h2>Arsip Mental Tanpa Kurasi</h2>
     </header>
     <main>
         <img src="images/foto.jpeg" class="foto-bulet">
@@ -17,7 +18,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; anjay jadi</p>
+        <p>&copy; this site was built with 20% code and 80% "ah udahlah capek"</p>
     </footer>
     <script src="script.js"></script>
 </body>
